--- a/Client/RfidLocker.vcxproj.filters
+++ b/Client/RfidLocker.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="SerialClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SimpleIni.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
